Add libv4l2 to the pkg-config in order not to fail linking ffmpeg to nvmpi.so
 - set visibility to default

Signed-off-by: gergely.boross <gergely.boross@aimotive.com>

--- a/nvmpi.pc.in
+++ b/nvmpi.pc.in
@@ -7,6 +7,6 @@ Name: @PROJECT_NAME@
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 
-Requires:
+Requires: libv4l2
 Libs: -L${libdir} -lnvmpi
 Cflags: -I${includedir} 
